--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,6 +5,8 @@ on:
     tags:
       - "v*"
 
+env:
+  APP_NAME: app
 
 jobs:
   build:
@@ -12,8 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ['ubuntu-latest']
-        # os: ['windows-latest', 'ubuntu-latest', 'macos-latest']
+        os: ['windows-latest', 'ubuntu-latest', 'macos-latest']
 
 
     steps:
@@ -40,24 +41,25 @@ jobs:
 
     - name: Create Artifact (Windows)
       if: matrix.os == 'windows-latest'
-      uses: actions/upload-artifact@v4
+      uses: ncipollo/release-action@v1
       with:
-        name: windows-executables
-        path: dist/
+        artifacts: "${{env.APP_NAME}}.exe"
+        allowUpdates: true
 
     - name: Create Artifact (Linux)
       if: matrix.os == 'ubuntu-latest'
-      uses: actions/upload-artifact@v4
+      uses: ncipollo/release-action@v1
       with:
-        name: linux-executables
-        path: dist/
+        artifacts: ${{env.APP_NAME}}
+        allowUpdates: true
 
     - name: Create Artifact (macOS)
       if: matrix.os == 'macos-latest'
-      uses: actions/upload-artifact@v4
+      uses: ncipollo/release-action@v1
       with:
-        name: macos-executables
-        path: dist/
+        artifacts: ${{env.APP_NAME}}
+        allowUpdates: true
+
 
     - name: List files in dist folder
       run: ls -R ./dist/
