--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,14 +10,8 @@ env:
   VERSION:  ${{ github.ref_name }}
 
 jobs:
-  setup:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Set poetry version name (remove v prefix)
-      run: echo "VERSION_POETRY=${VERSION#v}" >> $GITHUB_ENV
   build:
     runs-on: ${{ matrix.os }}
-    needs: setup
     permissions:
       contents: write
     strategy:
@@ -27,6 +21,10 @@ jobs:
 
 
     steps:
+    - name: Set poetry version name (remove v prefix)
+      run: |
+        echo "VERSION_POETRY=${VERSION#v}" >> $GITHUB_ENV
+      shell: bash
     - name: Checkout code
       uses: actions/checkout@v3
 
@@ -42,7 +40,7 @@ jobs:
     - name: Install package & update version
       run: |
         pip install poetry
-        poetry version $VERSION_POETRY
+        poetry version "${{env.VERSION_POETRY}}"
         poetry install --with dev
 
     - name: Build executable
