--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -51,7 +51,7 @@ jobs:
     - name: Build Installer (Windows)
       if: matrix.os == 'windows-latest'
       run: |
-        & 'C:\Program Files (x86)\Inno Setup 6\ISCC.exe' inno_setup.iss /DAppVersion=${{env.VERSION}}
+        & 'C:\Program Files (x86)\Inno Setup 6\ISCC.exe' inno_setup.iss /DAppVersion=${{env.VERSION_POETRY}}
         ls ./dist/
 
     - name: Create Artifact (Windows)
