--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ pygame = "^2.6.1"
 pystray = "^0.19.5"
 pillow = "^11.0.0"
 pyautogui = "^0.9.54"
+requests = "^2.32.3"
+rich = "^13.9.4"
 
 
 [tool.poetry.group.dev.dependencies]
