--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,12 @@
 [tool.poetry]
 name = "controller-companion"
 version = "0.2.0"
-description = ""
+description = "Python app for assigning shortcut actions to game controllers."
 authors = [
     "Johannes Gundlach <24914225+Johannes11833@users.noreply.github.com>",
 ]
 readme = "README.md"
+include = ["controller_companion/app/res/*"]
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.14"
@@ -28,4 +29,4 @@ build-backend = "poetry.core.masonry.api"
 [tool.poetry.scripts]
 controller_companion = "controller_companion.controller_observer:cli"
 controller_companion_ui = "controller_companion.app.app:cli"
-build = "controller_companion.pyinstaller:install"
+build_controller_companion_executable = "controller_companion.pyinstaller:install"
