--- a/.github/workflows/build_executables.yaml
+++ b/.github/workflows/build_executables.yaml
@@ -12,6 +12,7 @@ env:
 jobs:
   build:
     runs-on: ${{ matrix.os }}
+    if: github.ref == 'refs/heads/main'
     permissions:
       contents: write
     strategy:
