--- a/.github/workflows/publish_pypi.yaml
+++ b/.github/workflows/publish_pypi.yaml
@@ -15,6 +15,7 @@ jobs:
   pypi-publish:
     name: Upload release to PyPI
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
     environment:
       name: pypi
       url: https://pypi.org/project/controller-companion/
@@ -25,8 +26,6 @@ jobs:
         run: echo "VERSION_POETRY=${VERSION#v}" >> $GITHUB_ENV
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          ref: "main"
       - name: Set up Python 3.10
         uses: actions/setup-python@v5
         with:
@@ -46,3 +45,5 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
             commit_message: "Bump version to ${{env.VERSION}} :rocket:"
+            branch: main
+            file_pattern: "*.toml"
