--- a/.github/workflows/publish_pypi.yaml
+++ b/.github/workflows/publish_pypi.yaml
@@ -9,7 +9,7 @@ env:
   VERSION:  ${{ github.ref_name }}
 
 permissions:
-  contents: write
+  contents: read
 
 jobs:
   pypi-publish:
@@ -40,9 +40,3 @@ jobs:
         run: poetry build
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
-      - name: Commit updated version
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-            commit_message: "Bump version to ${{env.VERSION}} :rocket:"
-            branch: main
-            file_pattern: "*.toml"
