--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "controller-companion"
-version = "0.2.0"
+version = "v0.4.2"
 description = "Python app for assigning shortcut actions to game controllers."
 authors = [
     "Johannes Gundlach <24914225+Johannes11833@users.noreply.github.com>",
