Separate cli executable (build action) & add app launch argument to cli.

--- a/.github/workflows/build_executables.yaml
+++ b/.github/workflows/build_executables.yaml
@@ -45,7 +45,7 @@ jobs:
 
     - name: Build executable
       run: |
-        poetry run build_controller_companion_executable
+        pyinstaller './controller-companion.spec' --noconfirm 
         ls -R ./dist/
 
     - name: Build Installer (Windows)
